# fe2o3-amqp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile.toml  Readme.md
examples/activemq/: Cargo.toml  Readme.md
examples/alternative_tls_connection/: Cargo.toml  Readme.md
examples/alternative_tls_connection/src/: main.rs
examples/cancellation_safety/: Cargo.toml
examples/event_hub/: Cargo.toml  Readme.md
examples/event_hub/src/: lib.rs  main.rs
examples/event_hubs/: Cargo.toml  Readme.md
examples/event_hubs/src/: lib.rs
examples/macro_expand/: Cargo.toml
examples/macro_expand/src/: lib.rs  main.rs
examples/native_tls_connection/: Cargo.toml  Readme.md
examples/owned_txn_retirement/: Cargo.toml
examples/owned_txn_retirement/src/: main.rs
examples/protocol_test/: Cargo.toml
examples/protocol_test/src/: main.rs
examples/rustls_connection/: Cargo.toml  Readme.md
examples/rustls_connection/src/: main.rs
examples/sasl_connection/: Cargo.toml  Readme.md
examples/sasl_connection/src/: main.rs
examples/service_bus/: Cargo.toml  Readme.md
examples/service_bus/src/: main.rs
examples/service_bus_over_websocket/: Cargo.toml  Readme.md
examples/service_bus_over_websocket/src/: main.rs
examples/tls_sasl_connection/: Cargo.toml  Readme.md
examples/tls_sasl_connection/src/: main.rs
examples/wasm32_in_browser/: Cargo.toml  index.html
fe2o3-amqp/: Cargo.toml  Changelog.md  Makefile.toml  README.md  Readme.md
fe2o3-amqp-cbs/: Cargo.toml  Changelog.md  Readme.md
fe2o3-amqp-cbs/src/: client.rs  constants.rs  error.rs  lib.rs  put_token.rs  request.rs  response.rs  token.rs
fe2o3-amqp-ext/: Cargo.toml  Changelog.md  Readme.md
fe2o3-amqp-ext/src/: filters.rs  lib.rs
fe2o3-amqp-http/: Cargo.toml
fe2o3-amqp-http/src/: client.rs  error.rs  lib.rs  projected.rs  tunneled.rs  util.rs
fe2o3-amqp-macros/: Cargo.toml
fe2o3-amqp-macros/src/: de.rs  lib.rs  ser.rs  util.rs
fe2o3-amqp-management/: Cargo.toml  Changelog.md  Readme.md
fe2o3-amqp-management/src/: client.rs  constants.rs  error.rs  lib.rs  mgmt_ext.rs  request.rs  response.rs  status.rs  transaction.rs
fe2o3-amqp-management/src/operations/: mod.rs
fe2o3-amqp-types/: Cargo.toml  Changelog.md  Makefile.toml  Readme.md
fe2o3-amqp-types/src/: lib.rs  sasl.rs  states.rs
fe2o3-amqp-types/src/definitions/: amqp_error.rs  conn_error.rs  constant_def.rs  error.rs  error_cond.rs  link_error.rs  mod.rs  rcv_settle_mode.rs  role.rs  session_error.rs  snd_settle_mode.rs
fe2o3-amqp-types/src/messaging/: body_section.rs  dist_mode.rs  format.rs  lifetime_policy.rs  message.rs  mod.rs  source.rs  target.rs  term_expiry_policy.rs  terminus_durability.rs
fe2o3-amqp-types/src/performatives/: attach.rs  begin.rs  close.rs  detach.rs  disposition.rs  end.rs  flow.rs  mod.rs  open.rs  transfer.rs
fe2o3-amqp-types/src/primitives/: mod.rs  simple_value.rs
fe2o3-amqp-types/src/sasl/: mechanisms.rs  mod.rs
fe2o3-amqp-types/src/transaction/: mod.rs  txn_capability.rs  txn_error.rs
fe2o3-amqp-util/: Cargo.toml
fe2o3-amqp-util/src/: close.rs  consumer.rs  lib.rs  producer.rs
fe2o3-amqp-ws/: Cargo.toml  Changelog.md  Readme.md
fe2o3-amqp-ws/src/: error.rs  lib.rs  macros.rs  message.rs  native.rs  wasm.rs
fe2o3-amqp/src/: auth.rs  category.rs  connection.rs  constants.rs  constructor.rs  context.rs  contract.rs  control.rs  convert.rs  de.rs  delivery.rs  described.rs  descriptor.rs  endpoint.rs  engine.rs  error.rs  fixed_width.rs  format.rs  format_code.rs  lib.rs  macros.rs  read.rs  sasl.rs  ser.rs  session.rs  types_ext.rs  util.rs
fe2o3-amqp/src/acceptor/: builder.rs  connection.rs  error.rs  link.rs  local_receiver_link.rs  local_sender_link.rs  mod.rs  sasl_acceptor.rs  scram.rs  session.rs
fe2o3-amqp/src/auth/: error.rs  mod.rs  plain.rs
fe2o3-amqp/src/connection/: builder.rs  engine.rs  error.rs  heartbeat.rs  mod.rs
fe2o3-amqp/src/endpoint/: connection.rs  link.rs  mod.rs  session.rs  txn_resource.rs
fe2o3-amqp/src/frames/: amqp.rs  error.rs  mod.rs  sasl.rs
fe2o3-amqp/src/link/: builder.rs  delivery.rs  error.rs  frame.rs  incomplete_transfer.rs  mod.rs  receiver.rs  receiver_link.rs  resumption.rs  sender.rs  sender_link.rs  shared_inner.rs  source.rs  state.rs  target_archetype.rs
fe2o3-amqp/src/listener/: builder.rs  connection.rs  link.rs  mod.rs  sasl.rs  sasl_acceptor.rs  session.rs
fe2o3-amqp/src/primitives/: mod.rs
fe2o3-amqp/src/read/: ioread.rs  mod.rs  sliceread.rs
fe2o3-amqp/src/sasl_profile/: error.rs  mod.rs  scram.rs
fe2o3-amqp/src/scram/: attributes.rs  client.rs  error.rs  mod.rs  server.rs
fe2o3-amqp/src/session/: builder.rs  engine.rs  error.rs  frame.rs  mod.rs  transaction.rs
fe2o3-amqp/src/sync/: mod.rs
fe2o3-amqp/src/transaction/: acquisition.rs  control_link_frame.rs  control_link_msg.rs  controller.rs  coordinator.rs  error.rs  frame.rs  manager.rs  mod.rs  owned.rs  resource.rs  session.rs
fe2o3-amqp/src/transport/: adaptor.rs  amqp.rs  endpoint.rs  error.rs  handler.rs  mod.rs  priority.rs  protocol_header.rs  sasl.rs  tls_establishment.rs
fe2o3-amqp/src/types/: array.rs  decimal.rs  described.rs  descriptor.rs  list.rs  mod.rs  symbol.rs  timestamp.rs  uuid.rs
fe2o3-amqp/src/util/: consumer.rs  mod.rs  producer.rs
fe2o3-amqp/src/value/: de.rs  mod.rs  ser.rs
fe2o3-amqp/tests/: broker_connection_compat.rs  common.rs  link.rs  protocol.rs  sasl_acceptor.rs
fe2o3-core/: Cargo.toml
fe2o3-core/src/: lib.rs  primitives.rs
fe2o3-engine/: Cargo.toml
fe2o3-engine/src/: error.rs  lib.rs  util.rs
fe2o3-types/: Cargo.toml
serde_amqp/: Cargo.toml  Changelog.md  Makefile.toml  README.md
serde_amqp/benches/: serialize.rs
serde_amqp/src/: constants.rs  de.rs  described.rs  descriptor.rs  error.rs  fixed_width.rs  format.rs  format_code.rs  lazy.rs  lib.rs  macros.rs  ser.rs  size_ser.rs  util.rs
serde_amqp/tests/: derive.rs  described_basic.rs  described_list.rs  multiple_field.rs
serde_amqp_derive/: Cargo.toml  Changelog.md  Readme.md
serde_amqp_derive/src/: de.rs  lib.rs  ser.rs  util.rs
(+230 files in other folders)
