[workspace]
members = [
    "serde_amqp_derive",
    "serde_amqp", 
    "fe2o3-amqp",
    "fe2o3-amqp-ext",
    "fe2o3-amqp-types", 
    "fe2o3-amqp-ws",
]

exclude = [
    "examples/alternative_tls_connection",
    "examples/batchable_send",
    "examples/dispose_multiple",
    "examples/dynamic_sender",
    "examples/dynamic_receiver",
    "examples/listener",
    "examples/native_tls_connection",
    "examples/owned_txn_posting",
    "examples/owned_txn_retirement",
    "examples/protocol_test",
    "examples/receiver",
    "examples/receiver_auto_accept",
    "examples/rustls_connection",
    "examples/sasl_connection",
    "examples/sasl_listener",
    "examples/sender",
    "examples/tls_sasl_connection",
    "examples/txn_enabled_listener",
    "examples/txn_posting",
    "examples/txn_retirement",
    "examples/websocket",
    "examples/service_bus",
    "examples/service_bus_over_websocket",
]
