[workspace]

resolver = "2"

members = [
    "serde_amqp_derive",
    "serde_amqp", 
    "fe2o3-amqp-ext",
    "fe2o3-amqp-types", 
    "fe2o3-amqp",
    "fe2o3-amqp-ws",
    "fe2o3-amqp-management",
    "fe2o3-amqp-cbs",
]

exclude = [
    "examples/alternative_tls_connection",
    "examples/batchable_send",
    "examples/dispose_multiple",
    "examples/dynamic_sender",
    "examples/dynamic_receiver",
    "examples/listener",
    "examples/native_tls_connection",
    "examples/owned_txn_posting",
    "examples/owned_txn_retirement",
    "examples/protocol_test",
    "examples/receiver",
    "examples/receiver_auto_accept",
    "examples/recv_with_filter",
    "examples/rustls_connection",
    "examples/sasl_connection",
    "examples/sasl_listener",
    "examples/sender",
    "examples/send_with_custom_properties",
    "examples/tls_sasl_connection",
    "examples/txn_enabled_listener",
    "examples/txn_posting",
    "examples/txn_retirement",
    "examples/websocket",
    "examples/service_bus",
    "examples/service_bus_over_websocket",
    "examples/event_hubs",
    "examples/activemq",
    "examples/cancel_safety",
    "examples/quick_start",
    "examples/wasm32-in-browser",
    "examples/qpid_management_framework",
]

[workspace.dependencies]
# Local deps
fe2o3-amqp = { path = "fe2o3-amqp", version = "0.14" }
fe2o3-amqp-cbs = { path = "fe2o3-amqp-cbs", version = "0.14" }
fe2o3-amqp-ext = { path = "fe2o3-amqp-ext", version = "0.14" }
fe2o3-amqp-management = { path = "fe2o3-amqp-management", version = "0.14" }
fe2o3-amqp-types = { path = "fe2o3-amqp-types", version = "0.14" }
fe2o3-amqp-ws = { path = "fe2o3-amqp-ws", version = "0.14" }
serde_amqp_derive = { path = "serde_amqp_derive", version = "0.3.0" }
serde_amqp = { path = "serde_amqp", version = "0.14" }

# External deps
bytes = "1"
serde = "1"
serde_bytes = "0.11"
thiserror = "2"
log = "0.4"
tracing = "0.1"
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
futures-util = "0.3"
uuid = "1"
ordered-float = "5"
pin-project-lite = "0.2"
rand = "0.9"
rand_distr = "0.5"
getrandom = "0.3"
parking_lot = "0.12"
slab = "0.4"
url = "2"
sha-1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
stringprep = "0.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
webpki-roots = "1"
tokio-rustls = { version = "0.26", default-features = false }
librustls = { package = "rustls", version = "0.23", default-features = false }
libnative-tls = { package = "native-tls", version = "0.2" }
tokio-native-tls = "0.3"
ring = { version = "0.17", default-features = false }
tokio-stream = "0.1"
tokio-test = "0.4"
trait-variant = "0.1.1"
serde_repr = "0.1"
http = "1"
tungstenite = "0.26"
tokio-tungstenite = "0.26"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
wasmtimer = "0.4"
criterion = "0.5"
indexmap = "2"
serde_json = "1"
chrono = "0.4.30"
time = "0.3"

# dev only dependencies
testcontainers = "0.15.0"