[package]
name = "fe2o3-amqp-cbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fe2o3-amqp = "0.6.7"
fe2o3-amqp = { path = "../fe2o3-amqp" }
# fe2o3-amqp-management = "0.0.2"
fe2o3-amqp-management = { path = "../fe2o3-amqp-management" }
thiserror = "1"