[package]
name = "fe2o3-amqp-cbs"
version = "0.1.1"
edition = "2021"
description = "An experimental impl of AMQP 1.0 CBS extension"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fe2o3-amqp/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe2o3-amqp = { version = "0.7.11", path = "../fe2o3-amqp" }
fe2o3-amqp-management = { version = "0.1.0", path = "../fe2o3-amqp-management" }