[package]
name = "fe2o3-amqp-ext"
version = "0.0.1"
edition = "2021"
description = "Extension types to fe2o3-amqp"
license = "MIT/Apache-2.0"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_amqp = "0.0.11"
fe2o3-amqp-types = "0.0.30"
