[package]
name = "fe2o3-amqp-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1.0.127", features = ["derive"] }

[dependencies]
darling = "0.13.0"
quote = "1.0.9"
syn = "1.0.74"
