[package]
name = "fe2o3-amqp-types"
version = "0.0.30"
edition = "2021"
description = "Implementation of AMQP1.0 data types"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fe2o3-amqp-types/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp", "serde"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]

default = [
    "primitive",
    "transport",
    "messaging",
    "security",
    # "transaction",
]

primitive = []
transport = ["primitive"]
messaging = ["primitive", "transport"]
transaction = ["primitive", "messaging"]
security = ["primitive"]

[dependencies]
# serde_amqp = { version = "0.0.11", path = "../serde_amqp", features = ["derive"] }
serde_amqp = { version = "0.0.11", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ordered-float = { version = "3", features = ["serde"] }
serde_repr = "0.1"