[package]
name = "fe2o3-amqp-ws"
version = "0.13.0"
edition = "2021"
description = "WebSocket binding stream for AMQP1.0"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fe2o3-amqp-ws/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["websocket", "tokio"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
futures-util = { workspace = true, features = ["sink"] }
http = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
tungstenite = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
getrandom = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
] }

[dev-dependencies]
fe2o3-amqp = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

