[package]
name = "fe2o3-amqp"
version = "0.7.30"
edition = "2021"
description = "An implementation of AMQP1.0 protocol based on serde and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fe2o3-amqp/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp", "serde", "tokio"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# dev defaults
default = [
    # "acceptor",
    # "rustls",
    # "native-tls",
    # "transaction",
    # "scram",
]

transaction = ["fe2o3-amqp-types/transaction", "uuid"]

# TLS related features
rustls = ["tokio-rustls", "librustls", "webpki-roots"]
native-tls = ["tokio-native-tls", "libnative-tls"]

# Listener implementation
acceptor = []

# SASL SCRAM
scram = ["sha-1", "sha2", "rand", "base64", "stringprep", "hmac", "pbkdf2"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }
tokio-test = { version = "0.4" }
testcontainers = "0.14"

[dependencies]
# serde_amqp = "0.5.0-alpha"
serde_amqp = { version = "0.5.2", path = "../serde_amqp" }
# fe2o3-amqp-types = "0.6.0-alpha"
fe2o3-amqp-types = { version = "0.6.2", path = "../fe2o3-amqp-types" }

bytes = "1"
tokio = { version = "^1.16.1", features = ["io-util", "net", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] } # tokio-rs/tokio#4816
thiserror = "1"
serde = "1"
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = "0.2"
url = "2"
slab = "0.4"
tokio-stream = { version = "0.1", features = ["time"] }
async-trait = "0.1"
serde_bytes = "0.11"
parking_lot = { version = "0.12", features = ["send_guard"] }

# Optinoal deps that are feature themselves
tracing = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }

# Optional deps
tokio-rustls = { version = "0.24", optional = true }
librustls = { package = "rustls", version = "0.21", optional = true }
webpki-roots = { version = "0.23", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
libnative-tls = { package = "native-tls", version = "0.2", optional = true }
uuid = { version = "1.1", features = ["v4"], optional = true }
sha-1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.21", optional = true } # TODO: replace with base64-simd?
stringprep = { version = "0.1", optional = true }
hmac = { version = "0.12", optional = true }
pbkdf2 = { version = "0.12", default-features = false, optional = true }
