[package]
name = "fe2o3-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fe2o3-amqp]
version = "0.0.1"
path = "../fe2o3-amqp"

[dependencies.fe2o3-types]
version = "0.1.0"
path = "../fe2o3-types"

[dependencies]
bytes = "1.1.0"
tokio = "1.11.0"
tokio-util = { version = "0.6.8", features = ["codec"] }
futures-util = "0.3.17"
thiserror = "1.0.28"
