[package]
name = "fe2o3-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros"] }


[dependencies.fe2o3-amqp]
version = "0.0.1"
path = "../fe2o3-amqp"

[dependencies.fe2o3-types]
version = "0.1.0"
path = "../fe2o3-types"

[dependencies]
bytes = "1.1.0"
tokio = { version = "1.11.0", features = ["io-util"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
thiserror = "1.0.28"
futures = "0.3.17"
