[package]
name = "fe2o3-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_amqp = { version = "0.0.1", path = "../serde_amqp", features = ["derive"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_bytes = "0.11.5"
ordered-float = { version = "2.7.0", features = ["serde"] }

