[package]
name = "serde_amqp"
version = "0.10.0"
edition = "2021"
description = "A serde implementation of AMQP1.0 protocol."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/serde_amqp/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp", "serde"]
categories = ["encoding"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = []

derive = ["serde_amqp_derive"]
extensions = []

# Provide conversion from json::Value to amqp::Value
# and the value will use deserialize any instead of deserialize enum
# which has some hacky impl for amqp
json = ["serde_json"]

# A temporary feature flag that removes use of deprecated API from `chorono` until next breaking
# release
chrono-preview = ["chrono"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[dependencies]
ordered-float = { version = "4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1"
bytes = "1"
indexmap = { version = "2", features = ["serde"] }

# derive
serde_amqp_derive = { version = "0.2.0", path = "../serde_amqp_derive", optional = true }
# serde_amqp_derive = { version = "0.2", optional = true }

# Optinal dependencies
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1", optional = true }
time = { version = "0.3", optional = true }

[[bench]]
name = "serialize"
harness = false