[package]
name = "serde_amqp_derive"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies]
convert_case = "0.5"
darling = "0.13"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["parsing", "derive"] } 
