[package]
name = "serde_amqp_derive"
version = "0.0.1"
edition = "2021"
description = "Custom derive macros for serde_amqp"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/serde_amqp/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp", "serde"]
categories = ["encoding"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies]
convert_case = "0.5"
darling = "0.13"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["parsing", "derive"] } 
