[package]
name = "serde_amqp_derive"
version = "0.3.0"
edition = "2021"
description = "Custom derive macros for serde_amqp"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/serde_amqp/"
homepage = "https://github.com/minghuaw/fe2o3-amqp"
repository = "https://github.com/minghuaw/fe2o3-amqp"
keywords = ["amqp", "serde"]
categories = ["encoding"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

[dependencies]
convert_case.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing", "derive"] } 
