[package]
name = "activemq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { features = ["native-tls"],  path = "../../fe2o3-amqp" }

# The crates below are only needed depending on which TLS crate you use

tokio-native-tls = "0.3.0"
native-tls = "0.2.8"
tokio-rustls = { version = "0.26.0", default-features = false }
rustls = { version = "0.23.12", default-features = false }
webpki-roots = "0.26.3"