[package]
name = "alternative_tls_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { path = "../../fe2o3-amqp" }