[package]
name = "event_hubs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
fe2o3-amqp = { path = "../../fe2o3-amqp", features = ["rustls"] }
# fe2o3-amqp = { version = "0.6.7", features = ["rustls"] }
fe2o3-amqp-ext = { path = "../../fe2o3-amqp-ext" }
fe2o3-amqp-management = { path = "../../fe2o3-amqp-management" }
anyhow = "1"